#VERSION 0.9.4#

 - updated vendor twitter bootstrap to 2.1.0
 - fixed method _filter_match_key() of class Peak_Filters_Advanced to also return false if the key doesn't exists
 - modified method initConfig() of class Peak_Core because of new method loadFile() in Peak_Config
 - added method loadFile() to Peak_Config and modified method __construct() to support this new option too
 - added method log() to debugbar helper.
 - added css reset to debugbar.css
 - fixed view helper debugbar to not show when rendering is disable
 - deleted previously introducted noRender() in Peak_View and added instead methods canRender(), disableRender() and 
   enableRender() and modified method render()
 - fixed debugbar.js to not load jquery when it's already loaded
 - modified function _autoloadAppBaseCustom() to support parent models in case of customs app models folder in autoload.php
 - fixed method count() to support where string correctly in Peak_Model_Zendatable
 - fixed methods calculate() and _getData() to handle correctly pages when no result in class Peak_Model_Pagination
 - added some punctuations to _filter_text() in class Peak_Filters_Advanced
 - added method _filter_date() to class Peak_Filters_Advanced
 - added method _filter_url() to class Peak_Filters_Advanced

#VERSION 0.9.3#

 - method dispatchActionParams() is no more experimental in Peak_Controller_Action
 - changed property $actions_with_params to true by default in Peak_Controller_Action
 - added method noRender() in class Peak_View for disabling view rendering and modified method render() to support this.
 - fixed the call of Peak_Registry::obj() to Peak_Registry::o() in Peak_Lang
 - fixed a method name error in Peak_Model_Zendatable
 - fixed unwanted double slashes of server request uri in Peak_Router::getRequestURI()
 - updated Peak_Controller_Internal_Pkdoc with new version of twitter bootstrap
 - updated vendor twitter bootstrap 
 - added a new exception constant in Peak_Controller_Exception 