@@ -1,5 +1,6 @@
 #VERSION 0.9.4#
 
+ - updated Peak_Controller_Internal_Pkdoc with new version of twitter bootstrap
  - updated vendor twitter bootstrap to 2.1.0
  - fixed method _filter_match_key() of class Peak_Filters_Advanced to also return false if the key doesn't exists
  - modified method initConfig() of class Peak_Core because of new method loadFile() in Peak_Config
